--- a/ES_CartPole.ipynb
+++ b/ES_CartPole.ipynb
@@ -411,7 +411,7 @@
    "id": "fbd23a6b-a4fe-475b-adb2-68317f67ec6b",
    "metadata": {},
    "source": [
-    "## 1. Evaluation strategies"
+    "## 1. Evolution strategies"
    ]
   },
   {
